--- a/app/book.ipynb
+++ b/app/book.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sachi\\AppData\\Local\\Temp\\ipykernel_4440\\883913654.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sachi\\AppData\\Local\\Temp\\ipykernel_13968\\883913654.py:1: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  books = pd.read_csv('data/books.csv')\n"
      ]
     }
@@ -30,6 +30,261 @@
     "books = pd.read_csv('data/books.csv')\n",
     "users = pd.read_csv('data/Users.csv')\n",
     "ratings = pd.read_csv('data/Ratings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e2f1b3c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ISBN</th>\n",
+       "      <th>Book-Title</th>\n",
+       "      <th>Book-Author</th>\n",
+       "      <th>Year-Of-Publication</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Image-URL-S</th>\n",
+       "      <th>Image-URL-M</th>\n",
+       "      <th>Image-URL-L</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0195153448</td>\n",
+       "      <td>Classical Mythology</td>\n",
+       "      <td>Mark P. O. Morford</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Oxford University Press</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0195153448.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0002005018</td>\n",
+       "      <td>Clara Callan</td>\n",
+       "      <td>Richard Bruce Wright</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>HarperFlamingo Canada</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0002005018.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0060973129</td>\n",
+       "      <td>Decision in Normandy</td>\n",
+       "      <td>Carlo D'Este</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>HarperPerennial</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0060973129.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0374157065</td>\n",
+       "      <td>Flu: The Story of the Great Influenza Pandemic...</td>\n",
+       "      <td>Gina Bari Kolata</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Farrar Straus Giroux</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0374157065.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0393045218</td>\n",
+       "      <td>The Mummies of Urumchi</td>\n",
+       "      <td>E. J. W. Barber</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>W. W. Norton &amp;amp; Company</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0393045218.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271355</th>\n",
+       "      <td>0440400988</td>\n",
+       "      <td>There's a Bat in Bunk Five</td>\n",
+       "      <td>Paula Danziger</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Random House Childrens Pub (Mm)</td>\n",
+       "      <td>http://images.amazon.com/images/P/0440400988.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0440400988.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0440400988.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271356</th>\n",
+       "      <td>0525447644</td>\n",
+       "      <td>From One to One Hundred</td>\n",
+       "      <td>Teri Sloat</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>Dutton Books</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0525447644.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271357</th>\n",
+       "      <td>006008667X</td>\n",
+       "      <td>Lily Dale : The True Story of the Town that Ta...</td>\n",
+       "      <td>Christine Wicker</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>HarperSanFrancisco</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/006008667X.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271358</th>\n",
+       "      <td>0192126040</td>\n",
+       "      <td>Republic (World's Classics)</td>\n",
+       "      <td>Plato</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>Oxford University Press</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0192126040.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271359</th>\n",
+       "      <td>0767409752</td>\n",
+       "      <td>A Guided Tour of Rene Descartes' Meditations o...</td>\n",
+       "      <td>Christopher  Biffle</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>McGraw-Hill Humanities/Social Sciences/Languages</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "      <td>http://images.amazon.com/images/P/0767409752.0...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271360 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              ISBN                                         Book-Title  \\\n",
+       "0       0195153448                                Classical Mythology   \n",
+       "1       0002005018                                       Clara Callan   \n",
+       "2       0060973129                               Decision in Normandy   \n",
+       "3       0374157065  Flu: The Story of the Great Influenza Pandemic...   \n",
+       "4       0393045218                             The Mummies of Urumchi   \n",
+       "...            ...                                                ...   \n",
+       "271355  0440400988                         There's a Bat in Bunk Five   \n",
+       "271356  0525447644                            From One to One Hundred   \n",
+       "271357  006008667X  Lily Dale : The True Story of the Town that Ta...   \n",
+       "271358  0192126040                        Republic (World's Classics)   \n",
+       "271359  0767409752  A Guided Tour of Rene Descartes' Meditations o...   \n",
+       "\n",
+       "                 Book-Author Year-Of-Publication  \\\n",
+       "0         Mark P. O. Morford                2002   \n",
+       "1       Richard Bruce Wright                2001   \n",
+       "2               Carlo D'Este                1991   \n",
+       "3           Gina Bari Kolata                1999   \n",
+       "4            E. J. W. Barber                1999   \n",
+       "...                      ...                 ...   \n",
+       "271355        Paula Danziger                1988   \n",
+       "271356            Teri Sloat                1991   \n",
+       "271357      Christine Wicker                2004   \n",
+       "271358                 Plato                1996   \n",
+       "271359   Christopher  Biffle                2000   \n",
+       "\n",
+       "                                               Publisher  \\\n",
+       "0                                Oxford University Press   \n",
+       "1                                  HarperFlamingo Canada   \n",
+       "2                                        HarperPerennial   \n",
+       "3                                   Farrar Straus Giroux   \n",
+       "4                             W. W. Norton &amp; Company   \n",
+       "...                                                  ...   \n",
+       "271355                   Random House Childrens Pub (Mm)   \n",
+       "271356                                      Dutton Books   \n",
+       "271357                                HarperSanFrancisco   \n",
+       "271358                           Oxford University Press   \n",
+       "271359  McGraw-Hill Humanities/Social Sciences/Languages   \n",
+       "\n",
+       "                                              Image-URL-S  \\\n",
+       "0       http://images.amazon.com/images/P/0195153448.0...   \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...   \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...   \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...   \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...   \n",
+       "...                                                   ...   \n",
+       "271355  http://images.amazon.com/images/P/0440400988.0...   \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...   \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...   \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...   \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...   \n",
+       "\n",
+       "                                              Image-URL-M  \\\n",
+       "0       http://images.amazon.com/images/P/0195153448.0...   \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...   \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...   \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...   \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...   \n",
+       "...                                                   ...   \n",
+       "271355  http://images.amazon.com/images/P/0440400988.0...   \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...   \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...   \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...   \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...   \n",
+       "\n",
+       "                                              Image-URL-L  \n",
+       "0       http://images.amazon.com/images/P/0195153448.0...  \n",
+       "1       http://images.amazon.com/images/P/0002005018.0...  \n",
+       "2       http://images.amazon.com/images/P/0060973129.0...  \n",
+       "3       http://images.amazon.com/images/P/0374157065.0...  \n",
+       "4       http://images.amazon.com/images/P/0393045218.0...  \n",
+       "...                                                   ...  \n",
+       "271355  http://images.amazon.com/images/P/0440400988.0...  \n",
+       "271356  http://images.amazon.com/images/P/0525447644.0...  \n",
+       "271357  http://images.amazon.com/images/P/006008667X.0...  \n",
+       "271358  http://images.amazon.com/images/P/0192126040.0...  \n",
+       "271359  http://images.amazon.com/images/P/0767409752.0...  \n",
+       "\n",
+       "[271360 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "books"
    ]
   },
   {
@@ -818,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "7e8c5524",
    "metadata": {},
    "outputs": [
@@ -828,7 +1083,7 @@
        "'http://images.amazon.com/images/P/0439136350.01.MZZZZZZZ.jpg'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "b94cc12d",
    "metadata": {
     "scrolled": true
@@ -1488,7 +1743,7 @@
        "195     3.772472  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "8cadf2cc",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "5a7bb823",
    "metadata": {},
    "outputs": [],
@@ -1528,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "9b748d24",
    "metadata": {},
    "outputs": [],
@@ -1539,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "4b4f5f7f",
    "metadata": {},
    "outputs": [],
@@ -1549,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "af1c6e92",
    "metadata": {},
    "outputs": [],
@@ -1559,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "d049e58f",
    "metadata": {},
    "outputs": [],
@@ -1568,8 +1823,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "78b4bace",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "8f01aaf1",
    "metadata": {},
    "outputs": [
@@ -2013,7 +2274,7 @@
        "[706 rows x 810 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2024,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "d92c3841",
    "metadata": {},
    "outputs": [],
@@ -2034,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "141cdf48",
    "metadata": {},
    "outputs": [],
@@ -2044,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "4df281a2",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2315,7 @@
        "(706, 706)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "a9814230",
    "metadata": {},
    "outputs": [],
@@ -2090,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "a61f6934",
    "metadata": {},
    "outputs": [
@@ -2111,7 +2372,7 @@
        "  'http://images.amazon.com/images/P/0345313860.01.MZZZZZZZ.jpg']]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2122,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "834d504f",
    "metadata": {},
    "outputs": [
@@ -2132,7 +2393,7 @@
        "\"The Handmaid's Tale\""
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2143,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "e87f6224",
    "metadata": {},
    "outputs": [],
@@ -2154,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "91e1cc2d",
    "metadata": {},
    "outputs": [
@@ -2398,7 +2659,7 @@
        "[242135 rows x 8 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2415,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "e0b00559",
    "metadata": {},
    "outputs": [],
